// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns Cluster resource definitions in global search: SearchDefinitions-Cluster-globalhub 1`] = `
[
  {
    "cell": <CreateGlobalSearchDetailsLink
      item={
        {
          "cluster": "test-cluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Cluster",
          "label": "testLabel=label; testLabel1=label1",
          "managedHub": "global-hub",
          "name": "test-cluster",
          "namespace": "test-cluster",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "global-hub",
    "header": "Managed hub",
    "sort": "managedHub",
  },
  {
    "cell": "-",
    "header": "Available",
    "sort": "ManagedClusterConditionAvailable",
  },
  {
    "cell": "-",
    "header": "Hub accepted",
    "sort": "HubAcceptedManagedCluster",
  },
  {
    "cell": "-",
    "header": "Joined",
    "sort": "ManagedClusterJoined",
  },
  {
    "cell": "-",
    "header": "Nodes",
    "sort": "nodes",
  },
  {
    "cell": "-",
    "header": "Kubernetes version",
    "sort": "kubernetesVersion",
  },
  {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  {
    "cell": "-",
    "header": "Memory",
    "sort": "memory",
  },
  {
    "cell": "-",
    "header": "Console URL",
    "sort": "consoleURL",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns CreateApplicationTopologyLink - global search 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-6"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
      target="_blank"
    >
      View topology
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
    >
      View topology
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - ACM-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testApplicationNamespace/testApplicationName/overview?apiVersion=application.app.k8s.io&cluster=cluster"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Cluster 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Default 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - HUB-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/testPolicyNamespace/testPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Managed-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPolicy%26namespace%3DtestPolicyNamespace%26name%3DtestPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - NON-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DApplication%26namespace%3DtestApplicationNamespace%26name%3DtestApplicationName"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - PolicyReport 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testPolicyReportNamespace/testPolicyReportNamespace/overview?showClusterIssues%3Dtrue"
    >
      testPolicyReport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateExternalLink from clusterip 1`] = `"http://clusterip"`;

exports[`Correctly returns CreateExternalLink from consoleURL 1`] = `
<AcmButton
  component="a"
  href="http://consoleurl"
  icon={<ExternalLinkAltIcon />}
  iconPosition="right"
  isInline={true}
  target="_blank"
  variant="link"
>
  Launch
</AcmButton>
`;

exports[`Correctly returns CreateExternalVMLink 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-7"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="https://testCluster.com/k8s/ns/testVM/kubevirt.io~v1~VirtualMachine/testVM"
      target="_blank"
    >
      Details
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Application resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-3"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testClusterNamespace/testClusterName/overview?apiVersion=application.app.k8s.io&cluster=leaf-cluster"
      target="_blank"
    >
      testClusterName
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Cluster resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-2"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview?cluster%3Dundefined%26kind%3DCluster%26namespace%3DtestClusterNamespace%26name%3DtestClusterName"
      target="_blank"
    >
      testClusterName
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Policy resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/default/global-policy"
    >
      global-policy
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster PolicyReport resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-5"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
      target="_blank"
    >
      leaf-cluster-policyreport
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster default resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-1"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="https://leaf-hub.com/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
      target="_blank"
    >
      testPodName
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Application resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testClusterNamespace/testClusterName/overview?apiVersion=application.app.k8s.io"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Cluster resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Policy resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-4"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/governance/policies/details/default/hub-a-policy-test"
      target="_blank"
    >
      hub-a-policy-test
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub PolicyReport resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
    >
      local-cluster-policyreport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub default resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns VMLaunchLinks 1`] = `
<body>
  <div>
    <div
      style="display: contents;"
    >
      <span
        class="pf-v5-c-label"
      >
        <button
          class="pf-v5-c-label__content"
          type="button"
        >
          <span
            class="pf-v5-c-label__text"
          >
            Launch links
          </span>
        </button>
      </span>
    </div>
  </div>
</body>
`;

exports[`Correctly returns VirtualMachineSnapshot indications 1`] = `
<body>
  <div>
    <div
      class="pf-v5-c-label-group pf-m-vertical"
    >
      <div
        class="pf-v5-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v5-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v5-c-label-group__list-item"
          >
            <span
              class="pf-v5-c-label css-wm1cuv"
            >
              <span
                class="pf-v5-c-label__content"
              >
                <span
                  class="pf-v5-c-label__text"
                >
                  indication1
                </span>
              </span>
            </span>
          </li>
          <li
            class="pf-v5-c-label-group__list-item"
          >
            <span
              class="pf-v5-c-label css-wm1cuv"
            >
              <span
                class="pf-v5-c-label__content"
              >
                <span
                  class="pf-v5-c-label__text"
                >
                  indication2
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-application 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <CreateApplicationTopologyLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "Topology",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-channel 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  {
    "cell": "-",
    "header": "Pathname",
    "sort": "pathname",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cluster 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "-",
    "header": "Available",
    "sort": "ManagedClusterConditionAvailable",
  },
  {
    "cell": "-",
    "header": "Hub accepted",
    "sort": "HubAcceptedManagedCluster",
  },
  {
    "cell": "-",
    "header": "Joined",
    "sort": "ManagedClusterJoined",
  },
  {
    "cell": "-",
    "header": "Nodes",
    "sort": "nodes",
  },
  {
    "cell": "-",
    "header": "Kubernetes version",
    "sort": "kubernetesVersion",
  },
  {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  {
    "cell": "-",
    "header": "Memory",
    "sort": "memory",
  },
  {
    "cell": "-",
    "header": "Console URL",
    "sort": "consoleURL",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusteroperator 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Version",
    "sort": "version",
  },
  {
    "cell": "-",
    "header": "Available",
    "sort": "available",
  },
  {
    "cell": "-",
    "header": "Progressing",
    "sort": "progressing",
  },
  {
    "cell": "-",
    "header": "Degraded",
    "sort": "degraded",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-clusterserviceversion 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Version",
    "sort": "version",
  },
  {
    "cell": "-",
    "header": "Phase",
    "sort": "phase",
  },
  {
    "cell": "-",
    "header": "Display",
    "sort": "display",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cronjob 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "schedule",
    "sort": "schedule",
  },
  {
    "cell": "-",
    "header": "Suspend",
    "sort": "suspend",
  },
  {
    "cell": "-",
    "header": "Active",
    "sort": "active",
  },
  {
    "cell": <AcmTimestamp />,
    "header": "Last schedule",
    "sort": "lastSchedule",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-daemonset 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  {
    "cell": "-",
    "header": "Ready",
    "sort": "ready",
  },
  {
    "cell": "-",
    "header": "Updated",
    "sort": "updated",
  },
  {
    "cell": "-",
    "header": "Available",
    "sort": "available",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployable 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": "-",
    "header": "Chart URL",
    "sort": "chartUrl",
  },
  {
    "cell": "-",
    "header": "Dependencies",
    "sort": "dependencies",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployment 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  {
    "cell": "-",
    "header": "Ready",
    "sort": "ready",
  },
  {
    "cell": "-",
    "header": "Available",
    "sort": "available",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-genericresource 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-helmrelease 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Source type",
    "sort": "sourceType",
  },
  {
    "cell": "-",
    "header": "URL",
    "sort": "url",
  },
  {
    "cell": "-",
    "header": "Chart path",
    "sort": "chartPath",
  },
  {
    "cell": "-",
    "header": "Branch",
    "sort": "branch",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-job 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Completions",
    "sort": "completions",
  },
  {
    "cell": "-",
    "header": "Parallelism",
    "sort": "parallelism",
  },
  {
    "cell": "-",
    "header": "Successful",
    "sort": "successful",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-namespace 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-node 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Role",
    "sort": "role",
  },
  {
    "cell": "-",
    "header": "Architecture",
    "sort": "architecture",
  },
  {
    "cell": "-",
    "header": "OS image",
    "sort": "osImage",
  },
  {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolume 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Capacity",
    "sort": "capacity",
  },
  {
    "cell": "-",
    "header": "Access mode",
    "sort": "accessMode",
  },
  {
    "cell": "-",
    "header": "Claim",
    "sort": "claimRef",
  },
  {
    "cell": "-",
    "header": "Reclaim policy",
    "sort": "reclaimPolicy",
  },
  {
    "cell": "-",
    "header": "Path",
    "sort": "path",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolumeclaim 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Persistent volume",
    "sort": "volumeName",
  },
  {
    "cell": "-",
    "header": "Requests",
    "sort": "request",
  },
  {
    "cell": "-",
    "header": "Access mode",
    "sort": "accessMode",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementbinding 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": "-",
    "header": "Subjects",
    "sort": "subjects",
  },
  {
    "cell": "-",
    "header": "Placement policy",
    "sort": "placementpolicy",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementpolicy 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": "-",
    "header": "Replicas",
    "sort": "replicas",
  },
  {
    "cell": "-",
    "header": "Decisions",
    "sort": "decisions",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementrule 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Replicas",
    "sort": "replicas",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-pod 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Restarts",
    "sort": "restarts",
  },
  {
    "cell": "-",
    "header": "Host IP",
    "sort": "hostIP",
  },
  {
    "cell": "-",
    "header": "Pod IP",
    "sort": "podIP",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policy 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Disabled",
    "sort": "disabled",
  },
  {
    "cell": "-",
    "header": "Violations",
    "sort": "compliant",
  },
  {
    "cell": "-",
    "header": "Remediation action",
    "sort": "remediationAction",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policyreport 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "scope",
    "header": "Scope",
    "sort": "scope",
    "tooltip": "Scope refers to the cluster associated to the PolicyReport.",
  },
  {
    "cell": "-",
    "header": "Critical",
    "sort": "critical",
  },
  {
    "cell": "-",
    "header": "Important",
    "sort": "important",
  },
  {
    "cell": "-",
    "header": "Moderate",
    "sort": "moderate",
  },
  {
    "cell": "-",
    "header": "Low",
    "sort": "low",
  },
  {
    "cell": "-",
    "header": "Rules",
    "tooltip": "Use the rules filter to search for PolicyReports that contain a specific rule.",
  },
  {
    "cell": "-",
    "header": "Categories",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-release 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Chart name",
    "sort": "chartName",
  },
  {
    "cell": "-",
    "header": "Chart version",
    "sort": "chartVersion",
  },
  {
    "cell": <AcmTimestamp />,
    "header": "Updated",
    "sort": "updated",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-replicaset 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-secret 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-service 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Type",
    "sort": "type",
  },
  {
    "cell": "-",
    "header": "Cluster IP",
    "sort": "clusterIP",
  },
  {
    "cell": "-",
    "header": "Port",
    "sort": "port",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-statefulset 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Desired",
    "sort": "desired",
  },
  {
    "cell": "-",
    "header": "Current",
    "sort": "current",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.apps.open-cluster-management.io 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Package",
    "sort": "package",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Local placement",
    "sort": "localPlacement",
  },
  {
    "cell": "-",
    "header": "Time window",
    "sort": "timeWindow",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription.operators.coreos.com 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Package",
    "sort": "package",
  },
  {
    "cell": "-",
    "header": "Source",
    "sort": "source",
  },
  {
    "cell": "-",
    "header": "Channel",
    "sort": "Channel",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachine 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Ready",
    "sort": "ready",
  },
  {
    "cell": <VMLaunchLinks
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "",
    "id": "launch-links",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachineinstance 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Node",
    "sort": "node",
  },
  {
    "cell": "-",
    "header": "IP address",
    "sort": "ipaddress",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachinesnapshot 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "_conditionReadyReason",
  },
  {
    "cell": <VMSnapshotIndications
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Indications",
    "id": "vmsnapshot-indications",
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "sort": "created",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-virtualmachinespage 1`] = `
[
  {
    "cell": <CreateDetailsLink
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
    />,
    "header": "Name",
    "id": "name",
    "isDefault": true,
    "order": 1,
    "sort": "name",
  },
  {
    "cell": "-",
    "header": "Status",
    "id": "status",
    "isDefault": false,
    "isFirstVisitChecked": true,
    "order": 2,
    "sort": "status",
  },
  {
    "cell": <React.Fragment>
      testCluster
    </React.Fragment>,
    "header": "Cluster",
    "id": "cluster",
    "isDefault": false,
    "isFirstVisitChecked": true,
    "order": 3,
    "sort": "cluster",
  },
  {
    "cell": "testNamespace",
    "header": "Namespace",
    "id": "namespace",
    "isDefault": false,
    "isFirstVisitChecked": true,
    "order": 4,
    "sort": "namespace",
  },
  {
    "cell": "-",
    "header": "Node",
    "id": "node",
    "isDefault": false,
    "isFirstVisitChecked": true,
    "order": 5,
    "sort": "node",
  },
  {
    "cell": "-",
    "header": "IP address",
    "id": "ipaddress",
    "isDefault": false,
    "isFirstVisitChecked": true,
    "order": 6,
    "sort": "ipaddress",
  },
  {
    "cell": <VMLaunchLinks
      item={
        {
          "cluster": "testCluster",
          "created": "2021-01-01T00:00:00Z",
          "kind": "Pod",
          "label": "testLabel=label; testLabel1=label1",
          "name": "testName",
          "namespace": "testNamespace",
          "selfLink": "/apigroup/cluster/name",
        }
      }
      t={[Function]}
    />,
    "header": "Launch links",
    "id": "launch-links",
    "isDefault": false,
    "isFirstVisitChecked": true,
    "order": 7,
  },
  {
    "cell": <AcmTimestamp
      timestamp="2021-01-01T00:00:00Z"
    />,
    "header": "Created",
    "id": "created",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 8,
    "sort": "created",
  },
  {
    "cell": "-",
    "header": "Agent connected",
    "id": "agent-connected",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 9,
    "sort": "agentConnected",
  },
  {
    "cell": "-",
    "header": "Flavor",
    "id": "flavor",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 10,
    "sort": "flavor",
  },
  {
    "cell": "-",
    "header": "OS Name",
    "id": "os-name",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 11,
    "sort": "osName",
  },
  {
    "cell": "-",
    "header": "Workload",
    "id": "workload",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 12,
    "sort": "workload",
  },
  {
    "cell": "-",
    "header": "OS Version",
    "id": "os-version",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 13,
    "sort": "osVersion",
  },
  {
    "cell": "-",
    "header": "VM Size",
    "id": "vm-size",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 14,
    "sort": "vmSize",
  },
  {
    "cell": <AcmLabels
      collapse={[]}
      labels={
        [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "id": "labels",
    "isDefault": false,
    "isFirstVisitChecked": false,
    "order": 15,
    "sort": "label",
  },
]
`;

exports[`Correctly returns category components 1`] = `
<AcmLabels
  collapse={[]}
  labels={
    [
      "testcategory=category1",
      "testcategory=category2",
    ]
  }
/>
`;

exports[`Correctly returns empty CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <div>
      -
    </div>
  </div>
</body>
`;

exports[`Correctly returns empty CreateExternalLink 1`] = `"-"`;

exports[`Correctly returns empty CreateExternalVMLink 1`] = `
<body>
  <div>
    -
  </div>
</body>
`;

exports[`Correctly returns empty VirtualMachineSnapshot indications 1`] = `
<body>
  <div>
    -
  </div>
</body>
`;

exports[`Correctly returns empty labels 1`] = `"-"`;

exports[`Correctly returns label components 1`] = `
<AcmLabels
  collapse={[]}
  labels={
    [
      "testlabel=label1",
      "testlabel=label2",
    ]
  }
/>
`;

exports[`Correctly returns policyreport policies 1`] = `
<AcmLabels
  collapse={
    [
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
  labels={
    [
      "AUTH_OPERATOR_PROXY_ERROR",
      "CONTAINER_ROOT_PARTITION_SIZE",
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
/>
`;

exports[`Correctly returns resource with managedHub column: SearchDefinitions-global-node 1`] = `
[
  {
    "cell": <CreateGlobalSearchDetailsLink
      item={
        {
          "apiversion": "v1",
          "cluster": "testCluster",
          "kind": "Node",
          "managedHub": "testManagedHub",
          "name": "node.1",
        }
      }
    />,
    "header": "Name",
    "sort": "name",
  },
  {
    "cell": <React.Fragment>
      testCluster
      <TextContent>
        <Text
          component="small"
        >
          testManagedHub
        </Text>
      </TextContent>
    </React.Fragment>,
    "header": "Cluster",
    "sort": "cluster",
  },
  {
    "cell": "-",
    "header": "Status",
    "sort": "status",
  },
  {
    "cell": "-",
    "header": "Role",
    "sort": "role",
  },
  {
    "cell": "-",
    "header": "Architecture",
    "sort": "architecture",
  },
  {
    "cell": "-",
    "header": "OS image",
    "sort": "osImage",
  },
  {
    "cell": "-",
    "header": "CPU",
    "sort": "cpu",
  },
  {
    "cell": <AcmTimestamp />,
    "header": "Created",
    "sort": "created",
  },
  {
    "cell": "-",
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns url search params with 0 params 1`] = `"?cluster%3DtestCluster"`;

exports[`Correctly returns url search params with all params & apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;

exports[`Correctly returns url search params with all params without apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;
